# pastelito

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: helpers.rs  markdown.rs  ruleset.rs
pastelito/: Cargo.toml
pastelito-core/: Cargo.toml
pastelito-core/benches/: pastelito.rs
pastelito-core/benches/data/: README.md  leaving-rust-gamedev.md
pastelito-core/data/: leaving-rust-gamedev-tags.json
pastelito-core/examples/: cli.rs
pastelito-core/src/: block.rs  doc.rs  lib.rs  lines.rs  matcher.rs  perceptron.rs  rule.rs  span.rs  tagger.rs  tokenize.rs
pastelito-core/src/measures/: abstract_nouns.rs  academic_ad_words.rs  adjectives.rs  be_verbs.rs  mod.rs  prepositions.rs
pastelito-core/src/parsers/: markdown.rs  mod.rs  plaintext.rs
pastelito-core/src/rules/: academic_we.rs  mod.rs  passive_construction.rs  repeated_words.rs  weak_ing.rs  weasel_words.rs
pastelito-data/: Cargo.toml
pastelito-data/src/: lib.rs
pastelito-lsp/: Cargo.toml
pastelito-lsp-vscode/: Cargo.toml
pastelito-lsp-vscode/src/: main.rs  service.rs
pastelito-lsp/src/: main.rs  service.rs
pastelito-model/: Cargo.toml  build.rs
pastelito-model/src/: data.rs  lib.rs  model.rs
pastelito-vscode/: .vscodeignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
pastelito-vscode/src/: core.ts  display-lsp.ts  display-wasm.ts  display.ts  extension.ts  lib.rs  pastelito.rs  pastelito.ts  theme.ts
pastelito-vscode/wit/: pastelito.wit
pastelito/src/: main.rs
scripts/: fuzz-markdown  fuzz-ruleset
