[package]
name = "pastelito-fuzz"
version = "0.0.0"
authors = [
  "Phil Turnbull"
]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pastelito-core = { path = "../pastelito-core" }


[[bin]]
name = "markdown"
path = "fuzz_targets/markdown.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ruleset"
path = "fuzz_targets/ruleset.rs"
test = false
doc = false
bench = false
