[package]
name = "pastelito-lsp-vscode"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.40.0", features = ["io-std", "macros", "net", "rt", "rt-multi-thread", "io-util"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pastelito-core = { path = "../pastelito-core" }
clap = { version = "4.5.20", features = ["derive"] }
