[package]
name = "pastelito-model"
version = "0.1.0"
edition = "2021"

[dependencies]
fxhash = "0.2.1"
speedy = "0.8.7"
strum = { version = "0.26.3" }
strum_macros = "0.26.4"

[build-dependencies]
fxhash = "0.2.1"
serde_json = "1.0.128"
speedy = "0.8.7"
strum = { version = "0.26.3" }
strum_macros = "0.26.4"
